--- a/index.html
+++ b/index.html
@@ -336,14 +336,14 @@
                 <div id="address-container">
                     <label>Address</label>
                     <address>
-                        20377 Evergreen Terrace Mountain View, California, USA 
+                       Cairo,Elminofia-Berkt elsabe
                     </address>
 
                     <label>Phone</label>
-                    <a href="#">232-232-2323</a>
+                    <a href="#">01501537449</a>
 
                     <label>Email Address</label>
-                    <a href="#">ouremail@domain.com</a>
+                    <a href="#">abdoreda2060@gmail.com</a>
                 </div>
             </div>
         </div>
@@ -384,7 +384,7 @@
         </div>
 
         <small>
-            Copyright &copy; 2019 All rights reserved | This template is made with <span class="fa fa-heart"></span> by <a href="https://colorlib.com">Colorlib</a>
+            Copyright &copy; 2019 All rights reserved | This template is made with <span class="fa fa-heart"></span> by Abdo Reda
         </small>
     </footer>
 <script src="main.js"></script>
